# BitDash

./: .env  .gitignore  .gitignore_new  ATIVAR_BOT_AUTOMATICO.md  KEEP_ALIVE_IMPLEMENTADO.md  MUDANCAS_REALIZADAS.md  RELATORIO_CONFIABILIDADE_FINAL.md  RELATORIO_TESTES_FINAL.md  RELEASE_NOTES_v3.0.md  RENDER_DEPLOY_GUIDE.md  RENDER_FINAL_STEPS.md  RESOLVER_ERRO_500.md  RESUMO_EXECUTIVO.md  SISTEMA_OPERACIONAL.md  SOLUCAO_SPIN_DOWN.md  STATUS_FINAL.md  TESTE_ENDPOINTS.md  TESTE_RAPIDO.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  build.sh  dashboard_executivo.py  dashboard_executivo_20250725_041630.md  enhanced_api_test_20250725_043358.json  enhanced_api_test_20250725_043643.json  exemplo_alertas.md  exemplo_reliability_score.md  git_commands.txt  main.py  prepare_render.py  pyproject.toml  relatorio_confiabilidade_final.py  relatorio_confiabilidade_final_20250725_041540.txt  requirements.txt  requirements_bot.txt  run_alerts.bat  setup.py  signal_reliability_test_20250725_041138.json  start.py  technical_validation_20250725_041338.json  (+5 more)
.github/: copilot-instructions.md
api/: improved_xtb_api.py  main.py  main_fixed.py  main_old_rate_limit.py  main_old_single.py  main_rate_limit_fixed.py  main_reliability.py  main_simple.py
bots/: cloud_bot.py  multicrypto_bot.py  multicrypto_bot_final.py  telegram_signals_bot.py
config/: telegram_config.py
dashboard/: index.html  script.js  styles.css  xtb_trading_analyzer.js
docs/: ANALISE_EMAIL_TIMING.md  MELHORIAS_CONFIABILIDADE.md  MULTICRYPTO_IMPLEMENTED.md  RATE_LIMITING_SOLVED.md  README.md  SPIN_DOWN_RESOLVIDO.md  (+1 more)
(+2 files in other folders)
